# my_kotlin_android

./: .gitignore  README.md  build.gradle  commons.gradle  constants.gradle  gradle.properties  settings.gradle  settings.gradle.kts
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_download.xml  activity_home.xml  (+11 more)
cmakelibrary/: CMakeLists.txt  build.gradle
cmakelibrary/src/androidTest/java/com/test/gang/cmake/: ExampleInstrumentedTest.java
cmakelibrary/src/main/: AndroidManifest.xml
cmakelibrary/src/main/cpp/: native-lib.cpp
cmakelibrary/src/main/java/com/test/gang/cmake/: Hello.java  NativeDemo.java
cmakelibrary/src/test/java/com/test/gang/cmake/: ExampleUnitTest.java
datasource/: build.gradle
datasource/src/main/: AndroidManifest.xml
filechooser/: build.gradle
filechooser/src/main/: AndroidManifest.xml
flutter_bridge/: build.gradle
flutter_bridge/src/main/: AndroidManifest.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
mix_flutter/: .metadata  README.md  pubspec.yaml
mix_flutter/test/: widget_test.dart
myvideo/: build.gradle
myvideo/src/main/: AndroidManifest.xml
network/: build.gradle
network/src/main/: AndroidManifest.xml
player/: build.gradle
player/src/main/: AndroidManifest.xml
proxylibrary/: build.gradle
proxylibrary/src/main/: AndroidManifest.xml
torrent/: build.gradle
torrent/src/main/: AndroidManifest.xml
video-service/: build.gradle
video-service/src/main/: AndroidManifest.xml
videolibrary/: build.gradle
videolibrary/src/main/: AndroidManifest.xml
(+275 files in other folders)
